reverse inject and trigger names

--- a/nodes/core/locales/en-US/messages.json
+++ b/nodes/core/locales/en-US/messages.json
@@ -209,8 +209,8 @@
         "extend": " extend delay if new message arrives",
         "tip": "The node can also be reset by sending a message with the <code>msg.reset</code> property set to any value.",
         "label": {
-            "trigger": "trigger",
-            "trigger-block": "trigger & block",
+            "trigger": "inject",
+            "trigger-block": "inject & block",
             "reset": "and reset if msg.payload == ",
             "resetprompt": "(optional reset value)"
         }
